# FastEncryption

./: README.md
AlgorithmTest/Test/: Program.cs
Asymmetric/: Asymmetric.csproj  Program.cs
Asymmetric/EncryptionAlgorithm/: ECC.cs  RSA.cs
Asymmetric/Helper/: HashDRBG.cs  RandomPrimeGenerator.cs
Asymmetric/Test/: ECCTest.cs  RSATest.cs
Client/: README.md
Client/Assets/: Ground.mat
Client/ProjectSettings/: ProjectSettings.asset
Common/: README.md
Common/protobuf/: Enum.proto  Protocol.proto  Struct.proto
FastEncryption/: FastEncryption.sln  Program.cs
FastEncryption/EncryptionAlgorithm/: AES.cs  ARIA.cs  EncryptionAlgorithm.cs  HIGHT.cs  IEncryptionAlgorithm.cs  SPECK.cs  TWINE.cs
FastEncryption/OperationMode/: CBC.cs  CFB.cs  CTR.cs  ECB.cs  GCM.cs  IOperationMode.cs  OFB.cs  OperationMode.cs
FastEncryption/Test/: AESTest.cs  ARIATest.cs  HIGHTTest.cs  SPECKTest.cs  TWINETest.cs  TestAlgorithm.cs  TestCBC.cs  TestCFB.cs  TestCTR.cs  TestECB.cs  TestMode.cs  TestOFB.cs  TestSingleBlock.cs
Server/: Server.sln
Server/DummyClient/: DummyClient.csproj  Program.cs  ServerSession.cs  SessionManager.cs
Server/EncryptionAlgorithmTest/: EncryptionAlgorithmTest.csproj  Program.cs
Server/Encryption_Symmetric/: Encryption_Symmetric.csproj
Server/NetworkCore/: Connector.cs  FileLogger.cs  Listener.cs  Logger.cs  Session.cs
Server/PacketGenerator/: PDL.xml  PacketFormat.cs  (+1 more)
TestCode/: SPECK.cpp  SPECK.h  TWINE.h  main.cpp
Test_CPP/: AES.cpp  AES.h  ARIA.cpp  ARIA.h  CMakeLists.txt  HIGHT.cpp  HIGHT.h  SPECK.h  TWINE.cpp  main.cpp
참고자료/: 출처.txt
(+123 files in other folders)
